# celery-node-python-example

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
configmaps/: heroku.env
configmaps/pyenvs/: local.env
node/: Dockerfile  Makefile  package-lock.json  package.json
node/js_workers/: client_example.js  config.js  worker.js
node/js_workers/tasks/example/: arithmetic.js
python/: Dockerfile  Makefile  pyproject.toml
python/py_workers/: client_example.py  config.py  worker.py
python/py_workers/tasks/example/: arithmetic.py
python/py_workers/utils/: decorator.py
python/scripts/entrypoints/: start_worker_pyqueue.sh
python/tests/: test_py_worker.py
