[tool.poetry]
name = "py_workers"
version = "0.1.0"
description = ""
authors = ["Senhaji-Rhazi-Hamza <hamza.senhaji-rhazi@epita.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = "^5.0.5"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^5.5.5"
ipython = "^7.23.1"
watchdog = "^2.1.2"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
